# SkillsBrain

./: .gitignore  LICENSE  README.md  config.py  pyproject.toml  requirements.txt  test_dashboard.py  test_dashboard_features.py  validate_fix_1_5.py  validate_matching_accuracy.py  validate_subscriptions.py  项目审查文档-2026-04-20.md
.playwright-cli/: page-2026-04-27T08-23-39-695Z.yml  page-2026-04-27T08-24-10-207Z.yml  page-2026-04-27T08-25-00-465Z.yml  page-2026-05-12T02-33-44-366Z.yml  page-2026-05-12T02-40-14-160Z.yml  page-2026-05-12T02-41-19-679Z.yml
api/: main.py
core/: engine.py  indexer.py  parser.py  watcher.py
docs/: getting-started.md  release-notes-1.0.0.md  skill-id-and-routing-design.md  subscription-source-design.md
skill/: skillsbrain-guide.skill  using-skillsbrain.skill
skill/skillsbrain-guide/: SKILL.md
skill/skillsbrain-guide/references/: API_REFERENCE.md  QUERY_PATTERNS.md
skill/using-skillsbrain/: SKILL.md
skill/using-skillsbrain/references/: API_REFERENCE.md  CLI_REFERENCE.md  QUERY_PATTERNS.md  TROUBLESHOOTING.md
skills/docx/: SKILL.md
skills/file-organize/: SKILL.md
skills/news/: SKILL.md
skills/pdf/: SKILL.md
skills/weather/: SKILL.md
skills/xlsx/: SKILL.md
src/skillsbrain/: cli.py  config.py  runtime.py
src/skillsbrain/api/: main.py
src/skillsbrain/core/: engine.py  indexer.py  parser.py  subscriptions.py  watcher.py
src/skillsbrain/utils/: call_logger.py
utils/: call_logger.py
web/: index.html
