[project]
name = "skillsbrain"
version = "1.0.0"
description = "Local skill routing engine for AI Agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Chenwj9071"}
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.0",
    "python-frontmatter>=1.1.0",
    "pydantic-settings>=2.0.0",
    "watchdog>=3.0.0",
    "typer>=0.9.0",
    "requests>=2.28.0",
]

[project.scripts]
skillsbrain = "skillsbrain.cli:app"

[project.urls]
Homepage = "https://github.com/Chenwj9071/SkillsBrain"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
